data visualization and loading spinners in place with the start of information loading in

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,13 @@ box-shadow: 6px 8px 1000px -4px rgba(182,238,252,1);
   font-size: 20px;
 }
 
+.informationDataPage {
+  border: 1px solid rgba(182,238,252,1);
+  border-radius: 5px;
+  padding: 2%;
+  margin: 3%;
+}
+
 /* signup */
 
 @import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
