--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
-  background-color: rgb(0, 0, 0);
-  color: rgb(235, 235, 235);
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -9,13 +9,17 @@ body {
   margin-bottom: 50px;
 }
 
+.spinner {
+  margin-left: 50%;
+}
+
 footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 50px;
-  background-color: rgb(58, 160, 155);
+  background-color: #DE6262;
   color: white;
   text-align: center;
 }
@@ -27,29 +31,47 @@ footer {
 }
 
 .signup {
-  width: 100%;
+  width: 90%;
+  margin-top: 1%;
+}
+
+.login-block {
+  width: 65%;
+  margin-left: 15%;
+  border-radius: 10px;
+   background-color: rgba(193, 193, 248, 0.096);
 }
 
 .moonPage > img {
+   background-color: black;
   float: left;
-  padding: 1%;
-  margin: 1% 1% 1% 10%;
-  border:1px solid darkgrey;
-  border-radius: 10px;
-  -webkit-box-shadow: 6px 8px 1000px -4px rgba(182,238,252,1);
--moz-box-shadow: 6px 8px 1000px -4px rgba(182,238,252,1);
-box-shadow: 6px 8px 1000px -4px rgba(182,238,252,1);
+  padding: 2%;
+  margin: 1% 1% 1% 5%;
+  border: 2px solid rgb(0, 132, 255);
+  border-radius: 100px;
+  -webkit-box-shadow: 6px 8px 1000px -4px rgb(255, 249, 168);
+  -moz-box-shadow: 6px 8px 1000px -4px rgb(252, 247, 182);
+  box-shadow: 6px 8px 1000px -4px rgb(192, 192, 192);
 }
 
 .moonPage > img:hover {
-  border:1px solid rgb(126, 160, 173);
+  border:2px solid rgb(23, 202, 134);
   
 }
 
 .dataPage {
+  background: url(https://images.unsplash.com/photo-1488921618671-463b781ac428?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
+  background-size:cover;
+  border-radius: 10px;
+  padding: 2%;
+  width: 50%;
   margin-top: 1%;
+  margin-left: 25%;
   font-size: 20px;
+  box-shadow: 2px 5px 3px darkgrey;
 }
+
+
 
 .informationDataPage {
   border: 1px solid rgba(182,238,252,1);
@@ -70,24 +92,87 @@ box-shadow: 6px 8px 1000px -4px rgba(182,238,252,1);
 /* signup */
 
 @import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
-.login-block{
-    background: #DE6262;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, rgb(140, 176, 255), #DE6262);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, rgb(48, 98, 159), #DE6262); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-float:left;
-width:100%;
-padding : 25px 0;
+
+/* .login-block{
+  margin-left: 15%;
+  margin-bottom: 10%;
+  border-radius: 10px;
+  background: #DE6262;  /* fallback for old browsers */ /*
+  background: -webkit-linear-gradient(to bottom, rgb(140, 176, 255), #DE6262);  /*Chrome 10-25, Safari 5.1-6 */ /*
+  background: linear-gradient(to bottom, rgb(48, 98, 159), #DE6262); /* W3C, IE 10+/Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ /*
+  width: 70%;
+  padding : 25px 0;
+  box-shadow: 2px 5px 3px darkgrey;
+} */
+
+/* .banner-sec{ */
+  /* background: url(https://media.gettyimages.com/photos/man-walks-through-the-sea-water-flooding-the-portland-pier-after-high-picture-id903086592)  no-repeat left bottom; background-size:cover;  */ /*
+  min-height:300px; 
+  border-radius: 10px; 
+  padding:0;
+
 }
-.banner-sec{background:url(https://media.gettyimages.com/photos/man-walks-through-the-sea-water-flooding-the-portland-pier-after-high-picture-id903086592)  no-repeat left bottom; background-size:cover; min-height:500px; border-radius: 0 10px 10px 0; padding:0;}
-.container{color: rgb(48, 98, 159);background:rgb(255, 255, 255); border-radius: 10px; box-shadow:15px 20px 0px rgba(0,0,0,0.1);}
-.login-sec{padding: 50px 30px; position:relative;}
-.login-sec{background-color:rgba(205, 205, 205, 0.071);}
+
+/* .container{color: rgb(48, 98, 159);background:rgb(255, 255, 255); border-radius: 10px; box-shadow:15px 20px 0px rgba(0,0,0,0.1);} */
+
+.login-sec {
+  padding: 50px 30px; 
+  position:relative;
+}
+
+
 .login-sec .copy-text{position:absolute; width:80%; bottom:20px; font-size:13px; text-align:center;}
 .login-sec .copy-text i{color:rgb(138, 190, 254);}
-.login-sec .copy-text a{color:#E36262;}
+.login-sec .copy-text a{color:rgb(33, 97, 122);}
 .login-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #DE6262;}
 .login-sec h2:after{content:" "; width:200px; height:5px; background:#FEB58A; display:block; margin-top:20px; border-radius:3px; }
-.btn-login{background: #DE6262; color:#fff; font-weight:600;}
+
+.btn-login {
+  border-radius: 10px;
+  margin-left: 1%;
+  background: rgb(98, 177, 222); 
+  color:#fff; font-weight:600;
+}
+
+body{
+  height:auto;
+  margin:0;
+}
+
+/* #ocean{
+  position:absolute;
+  width:100%;
+  min-height:100%;
+  background-image: -webkit-gradient(
+  linear,
+  left bottom,
+  left top,
+  color-stop(0, rgb(0,50,150)),
+  color-stop(0.50, rgb(0,150,255))
+  );
+}
+
+.wave{
+  background:#a8e3ff;
+  display:inline-block;
+  height:60%;
+  width:10px;
+  position:absolute;
+  -webkit-animation-name:             dostuff; 
+  -webkit-animation-duration:         3s; 
+  -webkit-animation-iteration-count:  infinite;
+  -webkit-transition-timing-function: ease-in-out;
+}
 
 
-
+@-webkit-keyframes dostuff{
+  0%{
+    height:60%;
+  }
+  50%{ 
+    height:40%;
+  }
+  100%{ 
+    height:60%;
+  }
+} */
