--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ footer {
 
 .moonPage {
   width: auto;
+  
 }
 
 .moonPage > img {
@@ -51,6 +52,8 @@ footer {
   -webkit-box-shadow: 6px 8px 1000px -4px rgb(255, 249, 168);
   -moz-box-shadow: 6px 8px 1000px -4px rgb(252, 247, 182);
   box-shadow: 6px 8px 1000px -4px rgb(192, 192, 192);
+
+
 }
 
 .moonPage > img:hover {
@@ -62,11 +65,23 @@ footer {
   background-size:cover;
   border-radius: 10px;
   padding: 2%;
-  width: 50%;
-  margin-top: 1%;
-  margin-left: 25%;
+  width: 66%;
+  margin-top: 6%;
+  margin-left: 16.5%;
   font-size: 20px;
   box-shadow: 2px 5px 3px darkgrey;
+}
+
+.dataPage::after {
+  content: "";
+  background: url(https://images.unsplash.com/photo-1523275033438-8c0a9239935b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);
+  opacity: 0.5;
+  top: 0px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
 }
 
 .informationDataPage {
