--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,15 @@ footer {
 }
 
 .login-block {
+  border: 1px solid rgba(139, 0, 0, 0.137);
   width: 65%;
   margin-left: 15%;
   border-radius: 10px;
   background-color: rgba(193, 193, 248, 0.096);
+}
+
+.login-block:hover {
+  border: 1px solid rgba(139, 0, 0, 0.514);
 }
 
 .moonPage {
@@ -52,8 +57,6 @@ footer {
   -webkit-box-shadow: 6px 8px 1000px -4px rgb(255, 249, 168);
   -moz-box-shadow: 6px 8px 1000px -4px rgb(252, 247, 182);
   box-shadow: 6px 8px 1000px -4px rgb(192, 192, 192);
-
-
 }
 
 .moonPage > img:hover {
@@ -111,7 +114,6 @@ footer {
   color: white;
 }
 
-
 .septemberPage {
    background: url(https://services3.arcgis.com/IWh1Id1sBCnK9p7O/arcgis/rest/services/Portland_Flooding/FeatureServer/0/2/attachments/3);
    background-size: 115% 100%;
@@ -155,8 +157,6 @@ footer {
 #SeptLink:hover {
   color: white;
 }
-
-
 
 .informationDataPage {
   border: 1px solid rgba(182,238,252,1);
@@ -221,40 +221,19 @@ body{
   margin:0;
 }
 
-/* #ocean{
-  position:absolute;
-  width:100%;
-  min-height:100%;
-  background-image: -webkit-gradient(
-  linear,
-  left bottom,
-  left top,
-  color-stop(0, rgb(0,50,150)),
-  color-stop(0.50, rgb(0,150,255))
-  );
+/* media screen declarations */
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+
+  .alertDiv {
+    width: 100%;
+    font-size: 10px;
+  }
+  
+
+
+
 }
-
-.wave{
-  background:#a8e3ff;
-  display:inline-block;
-  height:60%;
-  width:10px;
-  position:absolute;
-  -webkit-animation-name:             dostuff; 
-  -webkit-animation-duration:         3s; 
-  -webkit-animation-iteration-count:  infinite;
-  -webkit-transition-timing-function: ease-in-out;
-}
-
-
-@-webkit-keyframes dostuff{
-  0%{
-    height:60%;
-  }
-  50%{ 
-    height:40%;
-  }
-  100%{ 
-    height:60%;
-  }
-} */
