--- a/src/App.css
+++ b/src/App.css
@@ -7,22 +7,10 @@ body {
 }
 
 .spinner {margin-left: 50%;}
-
-.toast {
-  margin-bottom: 3%;
-}
-
-table {
-  border: 1px solid rgb(123, 189, 228);
-}
-
-tr:hover {
-  background-color: rgb(221, 255, 244);
-}
-
-nav ul a {
-  color: rgb(44, 157, 177);
-}
+.toast {margin-bottom: 3%;}
+table {border: 1px solid rgb(123, 189, 228);}
+tr:hover {background-color: rgb(221, 255, 244);}
+nav ul a {color: rgb(44, 157, 177);}
 
 nav ul a:hover {
   color: rgb(250, 229, 134);
@@ -34,9 +22,7 @@ nav ul a:hover {
 
 nav ul a:active {transform: translate(1px, 1px);}
 
-.button-collapse {
-  color: rgb(44, 157, 177);
-}
+.button-collapse {color: rgb(44, 157, 177);}
 
 .button-collapse:hover {
   color: rgb(250, 229, 134);
@@ -79,6 +65,10 @@ footer {
 
 .login-block:hover {
   border: 1px solid rgba(139, 0, 0, 0.514);
+}
+
+.dropdown-content {
+  font-size: 14px;
 }
 
 .moonPage {width: auto;}
@@ -180,11 +170,11 @@ footer {
   box-shadow: 3px 5px 3px rgb(202, 202, 202);
 }
 
-.septemberPage::after {
+.septemberPage:after {
   content: "";
   background: url(https://images.unsplash.com/photo-1495102675274-3ba61637d5bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
   background-size: 100% 100%;
-   background-repeat: no-repeat;
+  background-repeat: no-repeat;
   opacity: 0.5;
   top: 0px;
   left: 0;
@@ -204,9 +194,7 @@ footer {
   color: rgb(236, 225, 118);
 }
 
-#SeptLink:hover {
-  color: white;
-}
+#SeptLink:hover {color: white;}
 
 .informationDataPage {
   padding: 2%;
@@ -214,13 +202,8 @@ footer {
   width: 50%;
 }
 
-.adminPage {
-  text-align: center;
-}
-
-.topOfAdminPage {
-  text-align: center
-}
+.adminPage {text-align: center;}
+.topOfAdminPage {text-align: center}
 
 .topOfAdminPage > .row {
   margin: 0;
@@ -256,37 +239,73 @@ footer {
   background-color: rgba(255, 255, 255, 0.733);
 }
 
-.rv-xy-plot__axis__tick__text {
-  text-shadow: 2px 2px 1px rgb(252, 230, 133);
+.rv-xy-plot__axis__tick__text {text-shadow: 2px 2px 1px rgb(252, 230, 133);}
+
+.rv-xy-plot__inner {
+  margin-left: 50%;
+  margin-top: -20%;
 }
 
-#icon_email {
-  width: 300px;
-}
+.rv-hint {margin: -1% 0 3% 15% !important}
+
+#icon_email {width: 300px;}
 
 .login-sec {padding: 2%; position:relative;}
-.login-sec .copy-text{position:absolute; width:80%; bottom:20px; font-size:13px; text-align:center;}
-.login-sec .copy-text i{color:rgb(138, 190, 254);}
-.login-sec .copy-text a{color:rgb(33, 97, 122);}
-.login-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #DE6262;}
-.login-sec h2:after{content:" "; width:200px; height:5px; background:#FEB58A; display:block; margin-top:20px; border-radius:3px; }
-.btn-login { border-radius: 10px; margin-left: 1%; background: rgb(98, 177, 222); color:#fff; font-weight:600;}
+
+.login-sec .copy-text {
+  position:absolute; 
+  width:80%; 
+  bottom:20px; 
+  font-size:13px; 
+  text-align:center;
+}
+
+.login-sec .copy-text i {color:rgb(138, 190, 254);}
+.login-sec .copy-text a {color:rgb(33, 97, 122);}
+
+.login-sec h2 {
+  margin-bottom:30px; 
+  font-weight:800; 
+  font-size:30px; 
+  color: #DE6262;
+}
+
+.login-sec h2:after {
+  content:" "; 
+  width:200px; 
+  height:5px; 
+  background:#FEB58A; 
+  display:block; 
+  margin-top:20px; 
+  border-radius:3px; 
+}
+
+.btn-login { 
+  border-radius: 10px; 
+  margin-left: 1%; 
+  background: rgb(98, 177, 222); 
+  color:#fff; 
+  font-weight:600;
+}
+
+
+.barChart > .rv-xy-plot__inner {
+  margin: 0;
+ 
+}
+
+.barChart > .rv-xy-plot__inner > g > line {
+  margin: 0;
+  text-shadow: none;
+}
 
 
 /* media screen declarations */
 
 @media only screen and (max-width: 850px) {
-  body {
-    background-color: rgb(255, 255, 255); 
-  }
+  .row {width: 100%;}
 
-  .row {
-    width: 100%;
-  }
-
-  .moonPage {
-    display: none;
-  }
+  .moonPage {display: none;}
 
   .login-block {
     width: 95%;
@@ -295,22 +314,10 @@ footer {
     font-size: 14px; 
   }
  
-  .signUp {
-    width: 100%;
-  }
-
-  .login-sec {
-    padding: 0;
-   max-width: 700px;
-  }
-
-  .tideChartCss {
-    margin: 0% !important;
-  }
-
-  .rv-xy-plot_inner {
-    width: 20px !important;
-  }
+  .signUp {width: 100%;}
+  .login-sec {padding: 0;max-width: 700px;}
+  .tideChartCss {margin: 0% !important;}
+  .rv-xy-plot_inner {width: 20px !important;}
 
   .dataPage {
     width: 95%;
@@ -333,20 +340,42 @@ footer {
   }
 
   .septemberPage {
-   background: url(https://services3.arcgis.com/IWh1Id1sBCnK9p7O/arcgis/rest/services/Portland_Flooding/FeatureServer/0/2/attachments/3);
-   background-size: 115% 100%;
-   background-repeat: no-repeat;
-  color: white;
-  border-radius: 10px;
-  padding: 2%;
-  width: 80%;
-  font-size: 12px;
-  text-shadow: 1px 1px black;
-  box-shadow: 3px 5px 3px rgb(202, 202, 202);
-}
+    background: url(https://services3.arcgis.com/IWh1Id1sBCnK9p7O/arcgis/rest/services/Portland_Flooding/FeatureServer/0/2/attachments/3);
+    background-size: 115% 100%;
+    background-repeat: no-repeat;
+    color: white;
+    border-radius: 10px;
+    padding: 2%;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 50%;
+    font-size: 10px;
+    text-shadow: 1px 1px black;
+    box-shadow: 3px 5px 3px rgb(202, 202, 202);
+  }
 
-.btn.teal {
-  margin-left: 0;
-}
+  .septemberPage > h4 {font-size: 20px;}
+  .btn.teal {margin-left: 0;}
+  .rv-xy-plot__axis__tick__text {text-shadow: 2px 2px 1px rgb(252, 230, 133);}
+
+  .rv-xy-plot__inner {
+    width: 75%;
+    margin-left: 0;
+    margin-top: -1%;
+  }
+
+  .rv-hint {margin: -1% 0 2% 5% !important;}
+
+  .unsubscribe {
+    display: inline-block;
+    margin-left: 2.5% !important;
+    background-image: linear-gradient(#ffffff, #56d7db65);
+  }
+
+  .unsubscribe-form {
+    margin: 1.33% !important;
+    width: 96% !important;
+    background-color: rgba(255, 255, 255, 0.733);
+  }
 
 }
