--- a/src/App.css
+++ b/src/App.css
@@ -32,63 +32,6 @@ nav ul a:active {transform: translate(1px, 1px);}
   transform: translate(1px, 1px);
 }
 
-footer {
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
-  background-color: rgba(255, 130, 130, 0.37);
-  color: white;
-  text-align: center;
-}
-
-.footer-btn {
-  margin-top: 5px;
-  border-radius: 10px;
-  font-size: 12px;
-}
-
-.signup {
-  width: 90%;
-  margin-top: 1%;
-}
-
-.login-block {
-  border: 1px solid rgba(139, 0, 0, 0.137);
-  width: 65%;
-  margin-left: 15%;
-  border-radius: 10px;
-  background-color: rgba(193, 193, 248, 0.096);
-}
-
-.login-block:hover {
-  border: 1px solid rgba(139, 0, 0, 0.514);
-}
-
-.dropdown-content {
-  font-size: 14px;
-}
-
-div.animated.infinite.bounce.delay-4s {
-  width: 44px;
-}
-
-.moonPage {width: auto;}
-
-.moonPage > img {
-  background-color: black;
-  float: left;
-  padding: 2%;
-  margin-left: 5%;
-  border: 2px solid rgb(0, 132, 255);
-  border-radius: 100px;
-  -webkit-box-shadow: 6px 8px 1000px -4px rgb(255, 249, 168);
-  -moz-box-shadow: 6px 8px 1000px -4px rgb(252, 247, 182);
-  box-shadow: 6px 8px 1000px -4px rgb(192, 192, 192);
-}
-
-.moonPage > img:hover {border:2px solid rgb(23, 202, 134);}
-
 .dataPage {
   background: url(https://images.unsplash.com/photo-1488921618671-463b781ac428?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
   background-size:cover;
@@ -158,6 +101,7 @@ div.animated.infinite.bounce.delay-4s {
 #GISLink:hover {color: white;}
 
 .septemberPage {
+  display: flex;
    background: url(https://services3.arcgis.com/IWh1Id1sBCnK9p7O/arcgis/rest/services/Portland_Flooding/FeatureServer/0/2/attachments/3);
    background-size: 115% 100%;
    background-repeat: no-repeat;
@@ -250,45 +194,6 @@ div.animated.infinite.bounce.delay-4s {
 
 #icon_email {width: 300px;}
 
-.login-sec {padding: 2%; position:relative;}
-
-.login-sec .copy-text {
-  position:absolute; 
-  width:80%; 
-  bottom:20px; 
-  font-size:13px; 
-  text-align:center;
-}
-
-.login-sec .copy-text i {color:rgb(138, 190, 254);}
-.login-sec .copy-text a {color:rgb(33, 97, 122);}
-
-.login-sec h2 {
-  margin-bottom:30px; 
-  font-weight:800; 
-  font-size:30px; 
-  color: #DE6262;
-}
-
-.login-sec h2:after {
-  content:" "; 
-  width:200px; 
-  height:5px; 
-  background:#FEB58A; 
-  display:block; 
-  margin-top:20px; 
-  border-radius:3px; 
-}
-
-.btn-login { 
-  border-radius: 10px; 
-  margin-left: 1%; 
-  background: rgb(98, 177, 222); 
-  color:#fff; 
-  font-weight:600;
-}
-
-
 .barChart > .rv-xy-plot__inner {
   margin: 0;
  
@@ -303,152 +208,51 @@ tr:nth-child(even) {
   background-color: #f2f2f2
 }
 
-
-/* media screen declarations */
-
-@media only screen and (max-width: 850px) {
-  .row {width: 100%;}
-
-  .moonPage {display: none;}
-
-  .login-block {
-    width: 95%;
-    margin: 2.5%;
-    padding: 0;
-    font-size: 14px; 
-  }
- 
-  .signUp {width: 100%;}
-  .login-sec {padding: 0;max-width: 700px;}
-  .tideChartCss {margin: 0% !important;}
-  .rv-xy-plot_inner {width: 20px !important;}
-
-  .dataPage {
-    width: 95%;
-    margin: 2.5%;
-    font-size: 14px;
-  }
-
-  .sixFtPage {
-    width: 96%;
-    font-size: 12px;
-    margin: 1%;
-    box-shadow: none;
-  }
-
-  .unsubInfoPage {
-    width: 96%;
-    font-size: 12px;
-    margin: 1%;
-    box-shadow: none;
-  }
-
-  .septemberPage {
-    background: url(https://services3.arcgis.com/IWh1Id1sBCnK9p7O/arcgis/rest/services/Portland_Flooding/FeatureServer/0/2/attachments/3);
-    background-size: 115% 100%;
-    background-repeat: no-repeat;
-    color: white;
-    border-radius: 10px;
-    padding: 2%;
-    width: 90%;
-    margin-left: 5%;
-    margin-top: 50%;
-    font-size: 10px;
-    text-shadow: 1px 1px black;
-    box-shadow: 3px 5px 3px rgb(202, 202, 202);
-  }
-
-  .septemberPage > h4 {font-size: 20px;}
-  .btn.teal {margin-left: 0;}
-  .rv-xy-plot__axis__tick__text {text-shadow: 2px 2px 1px rgb(252, 230, 133);}
-
-  .rv-xy-plot__inner {
-    width: 75%;
-    margin-left: 0;
-    margin-top: -1%;
-  }
-
-  .rv-hint {margin: -1% 0 2% 5% !important;}
-
-  .unsubscribe {
-    display: inline-block;
-    margin-left: 2.5% !important;
-    background-image: linear-gradient(#ffffff, #56d7db65);
-  }
-
-  .unsubscribe-form {
-    margin: 1.33% !important;
-    width: 96% !important;
-    background-color: rgba(255, 255, 255, 0.733);
-  }
-
+.FooterPage {
+  font-family: Aleo, menlo;
 }
 
-
-/* animated letter for information footer */
-*, *:before, *:after{
-  box-sizing:border-box;
+.FooterPage table {
+  font-size: 24px;
 }
 
-div.foo{
-  width: 90%;
-  margin: 0 auto;
+.FooterPage:after {
+  content: "";
+  background: url(https://images.unsplash.com/photo-1530123985359-4fd0cce1ea8b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2691&q=80);
+  background-size: 110% 110%;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+  top: 0px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
+}
+
+footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: rgba(255, 130, 130, 0.274);
+  color: white;
   text-align: center;
 }
-.letter{
-  display: inline-block;
-  font-weight: 900;
-  font-size: 6em;
-  margin: 0.2em;
-  position: relative;
-  color: rgb(98, 187, 222);
-  transform-style: preserve-3d;
-  perspective: 400;
-  z-index: 1;
+
+.mediaTable > .letter {
+  font-size: 34px;
 }
-.letter:before, .letter:after{
-  position:absolute;
-  content: attr(data-letter);
-  transform-origin: top left;
-  top:0;
-  left:0;
+
+table > tr > td {
+  font-size: 16px;
 }
-.letter, .letter:before, .letter:after{
-  transition: all 0.3s ease-in-out;
-}
-.letter:before{
-  color: rgb(255, 255, 255);
-  text-shadow: 
-    -1px 0px 1px rgba(255,255,255,.8),
-    1px 0px 1px rgba(0,0,0,.8);
-  z-index: 3;
-  transform:
-    rotateX(0deg)
-    rotateY(-15deg)
-    rotateZ(0deg);
-}
-.letter:after{
-  color: rgba(0,0,0,.11);
-  z-index:2;
-  transform:
-    scale(1.08,1)
-    rotateX(0deg)
-    rotateY(0deg)
-    rotateZ(0deg)
-    skew(0deg,1deg);
-}
-.letter:hover:before{
-  color: #fafafa;
-  transform:
-    rotateX(0deg)
-    rotateY(-40deg)
-    rotateZ(0deg);
-}
-.letter:hover:after{
-  transform:
-    scale(1.08,1)
-    rotateX(0deg)
-    rotateY(40deg)
-    rotateZ(0deg)
-    skew(0deg,22deg);
-}
+
+
+
+
+
+
+
+
+
