--- a/src/CSS/SignUp.css
+++ b/src/CSS/SignUp.css
@@ -47,7 +47,7 @@ div.animated.infinite.bounce.delay-4s {
   content:" "; 
   width:200px; 
   height:5px; 
-  background:#FEB58A; 
+  background:#ffe987; 
   display:block; 
   margin-top:20px; 
   border-radius:3px; 
