--- a/src/App.css
+++ b/src/App.css
@@ -249,12 +249,16 @@ table > tbody > tr > td {
 }
 
 .rv-hint {
+  text-align: center;
   position: relative !important;
-  border: 1px solid white; 
-  width: 200px; 
-  float: right;
-  margin-right: 20%;
-  margin-bottom: 10%;
+  border-top: 4px solid #ffe987; 
+  border-radius: none;
+  width: 400px; 
+  background-color: rgb(0, 0, 0) !important;
+  color: rgb(255, 235, 235);;
+  margin-left: 66%;
+  margin-top: -10%;
   padding: 2%;
+  font-size: 1.3em;
 }
 
