--- a/src/CSS/Admin.css
+++ b/src/CSS/Admin.css
@@ -1,5 +1,14 @@
-.adminPage {text-align: center;}
-.topOfAdminPage {text-align: center;}
+.adminPage {
+  text-align: center;
+}
+
+.topOfAdminPage {
+  text-align: center;
+  margin-bottom: 4%;
+  margin-top: 4%;
+  border: 2px solid rgb(8, 21, 78);
+  border-radius: 10px;
+}
 
 .topOfAdminPage > .row {
   margin: 0;
@@ -14,10 +23,6 @@
   border-bottom-left-radius: 10px;
 }
 
-tr:nth-child(even) {
-  background-color: #f2f2f2
-}
-
 .curUsers {
   text-align: left;
   margin-left: 10%;
@@ -26,6 +31,10 @@ tr:nth-child(even) {
 
 .barChart > .rv-xy-plot__inner {
   margin: 0;
+}
+
+.messagesTable {
+font-size: 18px;
 }
 
 
