styling for tuesday complete - carousel refactored

--- a/src/CSS/Letter.css
+++ b/src/CSS/Letter.css
@@ -1,4 +1,4 @@
-/* animated letter for information footer */
+animated letter for information footer
 *, *:before, *:after{
   box-sizing:border-box;
 }
