--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   height:auto;
   margin:0;
+  background-color: rgb(250, 250, 250);
 }
 
 .spinner {margin-left: 50%;}
@@ -142,11 +143,6 @@ nav ul a:active {transform: translate(1px, 1px);}
 
 #SeptLink:hover {color: white;}
 
-.informationDataPage {
-  display: flex;
-  width: 90%;
-}
-
 .btn.teal.slide {
   margin-top: 1%;
   background-color: rgb(78, 138, 173) !important; 
@@ -198,8 +194,6 @@ nav ul a:active {transform: translate(1px, 1px);}
   padding: 2%;
 }
 
-
-
 .FooterPage:after {
   content: "";
   background: url(https://images.unsplash.com/photo-1530123985359-4fd0cce1ea8b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2691&q=80);
@@ -229,8 +223,6 @@ footer {
   font-family: "Aleo", sans-serif;
   font-size: 2em;
   margin: 4%;
-
-
 }
 
 .infoLinks > a:hover {
@@ -271,7 +263,12 @@ table > tbody > tr > td {
   font-size: 1.3em;
 }
 
-.slide {
+.carouselPage {
+   width: 50%;
+   margin-left: 25%;
+}
+
+.slide-fwd {
 	-webkit-animation: slide-fwd-left 0.45s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	animation: slide-fwd-left 0.45s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
