--- a/src/App.css
+++ b/src/App.css
@@ -264,8 +264,27 @@ table > tbody > tr > td {
 }
 
 .carouselPage {
-   width: 50%;
-   margin-left: 25%;
+  width: 60%;
+  margin-left: 20%;
+}
+
+.carouselContainer {
+padding: 1%;
+
+}
+
+.carouselContainer:after {
+  content: "";
+  background: url(https://lh3.googleusercontent.com/TsVQtoA5ChHB9rYEyv8QFMOdIgD3JM26zCYrSCYVN0iSx9LK1fdNiUHedxnsg2mbibV47zKWEK4iqC8mtBc0ucp6kl_Dcnvxw5vgjrzVpjLqhjxDba-zg8ZUL1uohvzsLWglk1Nr5TGsffuBDOWigyOOAILLv-TqNqTdMBS6D607BluqxbezU0s8k_quJqfEXEyoUlgAXi858LyzjXRbvLpD1-NrcoZtauZHDlttVPrAWjVaQ5FW3XvdNQOBBS8ZB9GOarXgAHPNRurQQvLz8S4OinX5EcUTwujlTo4H482lYcXABTtkSzUYaZgnPtl6ruGYQ4pSy4NS5Oz6g90WcRCv9AEiNctAJKev5D6W4OodeNZgJbDufIqa8N9xD3BQ-Kx84Rcf-btu8nDP-aEY0P2nsU0K5hk2L7RkxNL6uZPUgaFu2xWgmdmdiMjRoYgfszTEKctuhqnNZ8Oc2aIZ_qtjKZPtFtxk8CEykk2jU3Oq-LhIAikgejgO2ari5PPwu2MoW5nEclUzXuJuHgiq_WGO0CT1i1aEjCr-4tgBQY8qMO_b48L4A5vEb3q17n3Buby7cAgRkNNt3cdoU5077qWyHl2CbHizaFszbol5DnF34BtZCA1Y5Hn0LHwe7jLk3l26VLcTTDBNXzd0Gms4MZTn=w2192-h1642-no);
+  background-size: 100% 200%;
+  background-repeat: no-repeat;
+  opacity: 0.6;
+  top: 0px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
 }
 
 .slide-fwd {
