--- a/src/CSS/Admin.css
+++ b/src/CSS/Admin.css
@@ -2,40 +2,66 @@
   text-align: center;
 }
 
-.topOfAdminPage {
-  text-align: center;
-  margin-bottom: 4%;
-  margin-top: 4%;
-  border: 2px solid rgb(8, 21, 78);
-  border-radius: 10px;
+.adminStats {
+  display: flex;
+  justify-content: space-around;
+  padding: 2%;
 }
 
-.topOfAdminPage > .row {
-  margin: 0;
-  width: 100% !important;
-}
 
-.barChart {
-  border-left: 2px solid teal;
-  border-right: 2px solid teal; 
-  border-bottom: 2px solid teal; 
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
+.adminStats > div {
+ margin: 5%;
+ padding: 1%;
 }
 
 .curUsers {
-  text-align: left;
-  margin-left: 10%;
-  font-size: 2em;
+  font-size: 1.5em;
+  border: 2px solid #DE6262;
+  border-radius: 10px;
+  margin-right: 5%;
+  height: 80%;
+}
+
+.curUsers > div {
+  color: rgb(44, 44, 44);
+  margin-top: 10%;
+}
+
+.barChart {
+  border-left: 2px solid #7C97FB;
+  border-right: 2px solid #7C97FB; 
+  border-bottom: 2px solid #7C97FB; 
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .barChart > .rv-xy-plot__inner {
   margin: 0;
 }
 
-.messagesTable {
-font-size: 18px;
+.smsContainer {
+  border-top: 2px solid #7C97FB; 
+  border-bottom: 2px solid #7C97FB; 
 }
+
+.messagesTable {
+  font-size: 18px;
+}
+
+.btn.teal.slide-fwd {
+  margin-left: 20%;
+}
+
+.btn.teal.toast {
+  margin-left: 15%;
+}
+
+.btn.teal.toast.sms {
+  position: relative;
+  margin-left: 15%;
+  top: 500px;
+}
+
 
 
 
