--- a/src/CSS/Moon.css
+++ b/src/CSS/Moon.css
@@ -5,7 +5,7 @@
   float: left;
   padding: 2%;
   margin-left: 5%;
-  border: 2px solid rgb(0, 132, 255);
+  border: 2px solid #7C97FB;
   border-radius: 100px;
   -webkit-box-shadow: 6px 8px 1000px -4px rgb(255, 249, 168);
   -moz-box-shadow: 6px 8px 1000px -4px rgb(252, 247, 182);
@@ -13,3 +13,7 @@
 }
 
 .moonPage > img:hover {border:2px solid rgb(23, 202, 134);}
+
+.floodingMoon > img {
+  border: 2px solid red !important;
+}
